@@ -19,6 +19,7 @@ Bug IDs that start with "K" can be found in the Kenai Bugzilla
 The following bugs have been fixed in the 1.4.6 release.
 
 K  4906	IMAP Store socket leak on connect with ProtocolException
+K  5086	STARTTLS when already using SSL may cause connection to fail
 
 
 		  CHANGES IN THE 1.4.5 RELEASE
